style: reduce navbar font size to prevent wrapping on small screens

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -47,6 +47,9 @@ nav a {
   border: 1px solid #9498a7;
   border-radius: 0.5rem;
   transition: 0.3s ease-in-out;
+  @media (max-width: 640px) {
+    font-size: small;
+  }
   &:hover {
     transform: scale(1.1);
     border-color: #fbc200;
